--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/ExtendedCase.cshtml
@@ -325,7 +325,7 @@
                     </div>
                 }
                 <div id="container_@extendedFormId" class="">
-                    @Html.Partial("_CaseInformation", Model, new ViewDataDictionary {{"Headline", Translation.Get(Model.ExtendedCaseDataModel.FormModel.Name)}})
+                    @Html.Partial("_CaseInformation", Model, new ViewDataDictionary { { "Headline", Translation.Get(Model.ExtendedCaseDataModel.FormModel.Name) } })
                     @*Extended case placement*@
                 </div>
             </div>
@@ -335,39 +335,40 @@
             <div id="attachment-tab" class="tab-pane" style="overflow: hidden;">
                 <div>
                     @*///* This copied code from NewCase.cshtml */
-                        ///* TODO: Make partial or shared code */*@
+                      TODO: Make partial or shared code *@
 
                     <div class="col-md-12" style="margin-top: 20px; margin-bottom: 0px !important;">
                         @if (Model.CaseId == 0)
                         {
-                            <a id="" href="#NewCase_upload_files_popup" role="button" class="btn btn-default hasAttribute" data-toggle="modal" standardName="@GlobalEnums.TranslationCaseFields.Filename.ToString()">@Translation.Get("Add", Enums.TranslationSource.TextTranslation)</a>
-                            <a href="#upload_clipboard_file_popup" role="button" class="btn btn-default hasAttribute" data-src="case" standardName="@GlobalEnums.TranslationCaseFields.Filename.ToString()">@Translation.Get("Add from clipboard", Enums.TranslationSource.TextTranslation)</a>
+                            <a href="#NewCase_upload_files_popup" id="" role="button" class="btn btn-default hasAttribute" data-toggle="modal" standardName="@GlobalEnums.TranslationCaseFields.Filename.ToString()">@Translation.Get("Add")</a>
+                            <a href="#upload_clipboard_file_popup" role="button" class="btn btn-default hasAttribute" data-src="case" standardName="@GlobalEnums.TranslationCaseFields.Filename.ToString()">@Translation.Get("Add from clipboard")</a>
                         }
                         <table id="NewCasefiles_table" class="table table-striped" style="margin-top: 10px;">
-                            <tbody>
+                        <tbody>
                             @if (Model.CaseId > 0 && Model.CaseDataModel.CaseFiles != null && Model.CaseDataModel.CaseFiles.Count > 0)
                             {
                                 foreach (var item in Model.CaseDataModel.CaseFiles)
                                 {
                                     <tr>
                                         <td>
-                                            <i class="glyphicon glyphicon-file">&nbsp;</i><a style="color: blue" href="@downloadCaseFileCompleteUrl.Replace("{name}", item.FileName).Replace("{id}", Model.CaseId.ToString())">@item.FileName</a>
+                                            <i class="glyphicon glyphicon-file">&nbsp;</i>
+                                            <a style="color: blue" href="@downloadCaseFileCompleteUrl.Replace("{name}", item.FileName).Replace("{id}", Model.CaseId.ToString())">@item.FileName</a>
                                         </td>
                                     </tr>
                                 }
                             }
-                            </tbody>
+                        </tbody>
                         </table>
                     </div>
                 </div>
             </div>
         }
-
-
     </div>
 
     @*/* only on new for now.. */*@
-    @if (ViewBag.AttachmentPlacement == 1 && Model.CaseId == 0 && Model.CaseDataModel.FieldSettings.Select(f => f.Name).Contains(GlobalEnums.TranslationCaseFields.Filename.ToString()))
+    @if (ViewBag.AttachmentPlacement == 1 &&
+         Model.CaseId == 0 &&
+         Model.CaseDataModel.FieldSettings.Select(f => f.Name).Contains(GlobalEnums.TranslationCaseFields.Filename.ToString()))
     {
         <div id="NewCase_upload_files_popup" role="dialog" class="modal fade" aria-labelledby="myModalLabel" aria-hidden="true">
             <div class="modal-dialog">
@@ -385,35 +386,16 @@
                 </div>
             </div>
         </div>
-        <div id="upload_clipboard_file_popup" role="dialog" class="modal fade" aria-labelledby="myModalLabelCase" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                        <h3>&nbsp;</h3>
-                    </div>
-                    <div class="modal-body" style="max-height: 600px; text-align: center;">
-                        <form onsubmit="return false;">
-                            <div class="form-group">
-                                <label>@Translation.Get("1. Write filename (leave blank for automatic naming)", Enums.TranslationSource.TextTranslation) </label><br/>
-                                <input class="" type="text" id="imgFilename" autocomplete="Off"/>
-                                <span id="imageNameRequired" style="color: red"> @Translation.Get("must be specified", Enums.TranslationSource.TextTranslation) </span>
-                            </div>
-                            <div class="form-group">
-                                <label>@(Translation.Get("2. Press Ctrl+V for inserting picture", Enums.TranslationSource.TextTranslation))</label><br/>
-                                <label>@(Translation.Get("3. Click on Save for adding to case", Enums.TranslationSource.TextTranslation)) </label>
-                                <div id="previewPnl"></div>
-                            </div>
-                        </form>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" id="btnSave" class="btn btn-ok btn-default" style="display: none">@Translation.Get("Save", Enums.TranslationSource.TextTranslation)</button>
-                        <button type="button" id="btnCancel" class="btn btn-cancel btn-default" data-dismiss="modal">@Translation.Get("Cancel", Enums.TranslationSource.TextTranslation)</button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        @Html.Partial("ModalDialogs/_UploadLogFileFromClipboard")
     }
 
 </div>
+
+@section Dialogs {
+    @if (Model.CaseId > 0 && ViewBag.IsLineManagerApplication)
+    {
+        @*//todo: add new model to pass configuration  for balloon-chat log notes*@
+        @Html.Action("Communication", new {caseId = Model.CaseId})
+    }
+}
 
