--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Message/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Message/Index.cshtml
@@ -4,6 +4,7 @@
 @if (Model != null)
 {
     ViewBag.Title = "MessageDialog";
+
     var _iconPath = "";
     var _dialogStyle = "";
 
@@ -58,5 +59,8 @@
         </div>
     </div>
 
-
+@section Footer {
+    @* This will hide footer section *@
 }
+}
+
