--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/MainMenuItems/_HelpAboutMenu.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Shared/MainMenuItems/_HelpAboutMenu.cshtml
@@ -1,23 +1,18 @@
 ﻿@model DH.Helpdesk.SelfService.Models.Shared.LayoutViewModel
 
-
 @if (Model.CurrentCustomer != null && Model.CurrentCustomer.ShowHelpOnExternalPage != 0)
 {
     <li class="dropdown blue">
         <a href="#" class="dropdown-toggle blue" data-toggle="dropdown">
             <i class="fa fa-info-circle mnu-fa"></i><br />
-            @Translation.Get("Need Help?", Enums.TranslationSource.TextTranslation)
+            @Translation.Get("Need Help?")
         </a>
         <ul class="dropdown-menu">
             <li>
-                <a href="@Url.Action("Index", "Help", new { customerId = Model.CustomerId, area = "" })">
-                @Translation.Get("Help", Enums.TranslationSource.TextTranslation)
-                </a>
+                <a href="@Url.Action("Index", "Help", new { customerId = Model.CustomerId, area = "" })">@Translation.Get("Help")</a>
             </li>
             <li>
-                <a href="@Url.Action("About", "Help", new { customerId = Model.CustomerId, area = "" })">
-                @Translation.Get("About", Enums.TranslationSource.TextTranslation)
-                </a>
+                <a href="@Url.Action("About", "Help", new {customerId = Model.CustomerId, area = ""})">@Translation.Get("About")</a>
             </li>
         </ul>
     </li>
