--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using DH.Helpdesk.BusinessData.OldComponents
+@using DH.Helpdesk.Common.Enums
 
 @model DH.Helpdesk.SelfService.Models.Case.CaseOverviewModel
 
@@ -102,14 +103,15 @@
          !Model.IsFinished && 
          CheckField(GlobalEnums.TranslationCaseFields.tblLog_Filename.ToString())) 
     {
-        @* //todo: add one more condition for COmmunication- Linemanager or enableBubleChat! *@
-        if (ViewBag.IsLineManagerApplication) 
+        //Show Communication for Selfservice (only if enabled in config)
+        if (ViewBag.IsLineManagerApplication || 
+           (ViewBag.ApplicationType == ApplicationTypes.SelfService && ViewBag.ShowCommunicationForSelfservice)) 
         {
              @Html.Partial("_Communication", Model.GetCaseLogModel())
         }
 
         @Html.Partial("ModalDialogs/_UploadExistingLogFilePopup")
-        @Html.Partial("ModalDialogs/_UploadLogFileFromClipboard")    
+        @Html.Partial("ModalDialogs/_UploadFileFromClipboardPopup")    
     }
 }
 
